Fix --text color contrast

--- a/src/components/styles/index.scss
+++ b/src/components/styles/index.scss
@@ -407,7 +407,7 @@ body {
 
 		p {
 			font-size: .8rem;
-		    	color: #b7b7b7;
+		    	color: #c7c7c7;
 		    	line-height: 1.75;
 		    	overflow: hidden;
 		    	text-overflow: ellipsis;
